<resources>
    <string name="app_name" translatable="false">UnipiPLIShopping</string>

    <!--Main-->
    <string name="settings_label">Settings</string>
    <string name="location_label_off">Search based on Location is off</string>
    <string name="location_label_on">Search based on Location is on</string>
    <string name="order_label">Order Products</string>

    <!--Toasts Main-->
    <string name="toast_location_asked_on">Location turned on</string>
    <string name="toast_location_asked_off">Location is still off</string>
    <string name="toast_location_on">Location is on</string>
    <string name="toast_location_off">Location is off, please enable it</string>
    <string name="toast_location_disabled">Location is disabled so you cannot search based on Location!</string>

    <!--Notification-->
    <string name="not_title">Nearby Product Found</string>
    <string name="not_message">You are near the product: </string>

    <!--Items-->
    <string name="product_code">Product Code</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="product_release_date">Product Release Date</string>
    <string name="product_price">Product Price</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="notYet">Not yet registered? Sign Up</string>

    <!--Toasts Login-->
    <string name="toast_login_notEmpty_username">Username cannot be empty</string>
    <string name="toast_login_notEmpty_password">Password cannot be empty</string>
    <string name="toast_login_invalid">Invalid Credentials</string>
    <string name="toast_login_notExisted">User does not exist</string>

    <!--SignUp-->
    <string name="signup">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="already">Already a user? Login</string>

    <!--Toasts SignUp-->
    <string name="toast_signup_success">You have signed up successfully!</string>
    <string name="toast_signup_fail">Signup failed: </string>


    <!--Profile-->
    <string name="edit">Edit Profile</string>
    <string name="save">Save</string>

    <!--Toasts Profile-->
    <string name="toast_saved_name_surname">Saved</string>

    <!--Products-->
    <string name="listOf">List of Available Products</string>
    <string name="products">Products</string>

    <!--Toasts Product Adapter-->
    <string name="toast_order_success">Your Order added successfully!</string>
    <string name="price_label">Price: €</string>

    <!--Settings-->
    <string name="theme_label">Dark Theme</string>
    <string name="language_label">Language</string>
    <string name="english">English</string>
    <string name="greek">Greek</string>
    <string name="french">French</string>
    <string name="language_changed_to">Language changed to</string>

    <!--NotificationActivity-->
    <string name="cancel_order">Cancel Order</string>
    <string name="get_later">Get Later</string>

</resources>